--- a/pages/menu.html
+++ b/pages/menu.html
@@ -18,26 +18,26 @@
 <body>
     <header >
         <nav class="fixed-top navbar navbar-expand-lg navbar-dark bg-dark">
-            <img class="logo" src="./assets/logo.png" alt="logo">
+            <img class="logo" src="../assets/logo.png" alt="logo">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="/index.html">Home</a>
+                  <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/pages/menu.html">Menu</a>
+                  <a class="nav-link" href="./pages/menu.html">Menu</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
+                  <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/sucursales.html">Sucursales</a>
+                    <a class="nav-link" href="./pages/sucursales.html">Sucursales</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                 </li>
               </ul>
             </div>
@@ -49,10 +49,10 @@
         </div>
         <section class="cont_menu">
             <div class="card_menu">
-                <img class="menu_img" src="./assets/menu1.JPG" alt="Menu1">
+                <img class="menu_img" src="../assets/" alt="Menu1">
             </div>
             <div>
-                <img class="menu_img" src="./assets/menu2.JPG" alt="Menu2">
+                <img class="menu_img" src="../assets/menu2.JPG" alt="Menu2">
             </div>
         </section>
     </main>
@@ -61,10 +61,10 @@
             <h3 class="texto">Siguenos:</h3>
             <div class="nuevo">
                
-                    <img class="redes_sociales_iconos" src="assets/facebook.png" alt="Facebook">
-                    <img class="redes_sociales_iconos" src="assets/instagram.png" alt="Instagram">
-                    <img class="redes_sociales_iconos" src="assets/whatsapp.png" alt="Whatsapp">
-                    <img class="redes_sociales_iconos" src="assets/x.png" alt="X">
+                    <img class="redes_sociales_iconos" src="../assets/facebook.png" alt="Facebook">
+                    <img class="redes_sociales_iconos" src="../assets/instagram.png" alt="Instagram">
+                    <img class="redes_sociales_iconos" src="../assets/whatsapp.png" alt="Whatsapp">
+                    <img class="redes_sociales_iconos" src="../assets/x.png" alt="X">
                
             </div>
         </section>
