--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -18,7 +18,7 @@
 <body>
     <header >
         <nav class="fixed-top navbar navbar-expand-lg navbar-dark bg-dark">
-            <img class="logo" src="./assets/logo.png" alt="logo">
+            <img class="logo" src="../assets/logo.png" alt="logo">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -49,7 +49,7 @@
         </div>
         <section class="cont_grande">
             <div class="card_nosotros">
-              <img class="img_card" src="./assets/nosotros.jpg" alt="Foto cafeteria">
+              <img class="img_card" src="../assets/nosotros.jpg" alt="Foto cafeteria">
               <p class="p_card">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus quo ex voluptates perferendis consectetur tempora harum est ab autem. Iure inventore, saepe dolorem nobis illo aut eveniet facere totam error. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga cupiditate quos, suscipit vel ab velit, facere et ducimus ex laudantium eveniet vitae molestiae vero doloremque praesentium odio delectus sequi. Eos.</p>
             </div>
            
@@ -60,10 +60,10 @@
       <section class="cont_redes">
           <h3 class="texto">Siguenos:</h3>
           <div class="nuevo">
-                  <img class="redes_sociales_iconos" src="assets/facebook.png" alt="Facebook">
-                  <img class="redes_sociales_iconos" src="assets/instagram.png" alt="Instagram">
-                  <img class="redes_sociales_iconos" src="assets/whatsapp.png" alt="Whatsapp">
-                  <img class="redes_sociales_iconos" src="assets/x.png" alt="X">
+                  <img class="redes_sociales_iconos" src="../assets/facebook.png" alt="Facebook">
+                  <img class="redes_sociales_iconos" src="../assets/instagram.png" alt="Instagram">
+                  <img class="redes_sociales_iconos" src="../assets/whatsapp.png" alt="Whatsapp">
+                  <img class="redes_sociales_iconos" src="../assets/x.png" alt="X">
              
           </div>
       </section>
