--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -17,7 +17,7 @@
 <body>
     <header >
         <nav class="fixed-top navbar navbar-expand-lg navbar-dark bg-dark">
-            <img class="logo" src="./assets/logo.png" alt="logo">
+            <img class="logo" src="../assets/logo.png" alt="logo">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -48,19 +48,19 @@
         </div>
         <section class="cont_suc">
             <div class="card_suc">
-                <img class="suc_img" src="./assets/sucursal1.jpg" alt="Sucursal1">
+                <img class="suc_img" src="../assets/sucursal1.jpg" alt="Sucursal1">
                 <p class="p_suc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim eveniet nihil totam repellendus explicabo maxime blanditiis nisi doloremque cumque.</p>
             </div class="card_suc">
             <div class="card_suc">
-                <img class="suc_img" src="./assets/sucursal2.jpg" alt="Sucursal2">
+                <img class="suc_img" src="../assets/sucursal2.jpg" alt="Sucursal2">
                 <p class="p_suc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim eveniet nihil totam repellendus explicabo maxime blanditiis nisi doloremque cumque.</p>
             </div>
             <div class="card_suc">
-                <img class="suc_img" src="./assets/sucursal3.jpg" alt="Sucursal3">
+                <img class="suc_img" src="../assets/sucursal3.jpg" alt="Sucursal3">
                 <p class="p_suc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim eveniet nihil totam repellendus explicabo maxime blanditiis nisi doloremque cumque.</p>
             </div>
             <div class="card_suc">
-                <img class="suc_img" src="./assets/sucursal4.jpg" alt="Sucursal4">
+                <img class="suc_img" src="../assets/sucursal4.jpg" alt="Sucursal4">
                 <p class="p_suc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim eveniet nihil totam repellendus explicabo maxime blanditiis nisi doloremque cumque.</p>
             </div>
 
@@ -72,10 +72,10 @@
             <h3 class="texto">Siguenos:</h3>
             <div class="nuevo">
                
-                    <img class="redes_sociales_iconos" src="assets/facebook.png" alt="Facebook">
-                    <img class="redes_sociales_iconos" src="assets/instagram.png" alt="Instagram">
-                    <img class="redes_sociales_iconos" src="assets/whatsapp.png" alt="Whatsapp">
-                    <img class="redes_sociales_iconos" src="assets/x.png" alt="X">
+                    <img class="redes_sociales_iconos" src="../assets/facebook.png" alt="Facebook">
+                    <img class="redes_sociales_iconos" src="../assets/instagram.png" alt="Instagram">
+                    <img class="redes_sociales_iconos" src="../assets/whatsapp.png" alt="Whatsapp">
+                    <img class="redes_sociales_iconos" src="../assets/x.png" alt="X">
                
             </div>
         </section>
