--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,7 +20,7 @@
 <body>
   <header>
     <nav class="fixed-top navbar navbar-expand-lg navbar-dark bg-dark">
-      <img class="logo" src="./assets/logo.png" alt="logo">
+      <img class="logo" src="../assets/logo.png" alt="logo">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
