--- a/pages/menu.html
+++ b/pages/menu.html
@@ -25,19 +25,19 @@
             <div class="collapse navbar-collapse" id="navbarText">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="./index.html">Home</a>
+                  <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./pages/menu.html">Menu</a>
+                  <a class="nav-link" href="menu.html">Menu</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                  <a class="nav-link" href="nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/sucursales.html">Sucursales</a>
+                    <a class="nav-link" href="sucursales.html">Sucursales</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="contacto.html">Contacto</a>
                 </li>
               </ul>
             </div>
@@ -49,7 +49,7 @@
         </div>
         <section class="cont_menu">
             <div class="card_menu">
-                <img class="menu_img" src="../assets/" alt="Menu1">
+                <img class="menu_img" src="../assets/menu1.JPG" alt="Menu1">
             </div>
             <div>
                 <img class="menu_img" src="../assets/menu2.JPG" alt="Menu2">
