--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -24,19 +24,19 @@
             <div class="collapse navbar-collapse" id="navbarText">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="./index.html">Home</a>
+                  <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./pages/menu.html">Menu</a>
+                  <a class="nav-link" href="../pages/menu.html">Menu</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                  <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/pages/sucursales.html">Sucursales</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                 </li>
               </ul>
             </div>
